MapClient: Fix big villages name overflowing the tooltip.

--- a/public/stylesheets/map.css
+++ b/public/stylesheets/map.css
@@ -279,6 +279,13 @@ button.red:focus {
     white-space: nowrap;
 }
 
+#tooltip .village-name {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: calc(100% - 54px);
+    display: inline-block;
+    vertical-align: top;
+}
 
 
 
